NXT-14640-1: Fixed Slider stylings, according to latest GUI (#364)
### Checklist

* [x] I have read and understand the [contribution
guide](https://enactjs.com/docs/developer-guide/contributing/)
* [ ] A [CHANGELOG
entry](https://enactjs.com/docs/developer-guide/contributing/changelogs/)
is included
* [ ] At least one test case is included for this feature or bug fix
* [x] Documentation was added or is not needed
* [ ] This is an API breaking change

### Issue Resolved / Feature Added
[//]: # (Describe the issue resolved or feature added by this pull
request)
Slider knob was invisible, when colorPicker and not focused

### Resolution
[//]: # (Does the code work as intended?)
[//]: # (What is the impact of this change and *why* was it made?)
Fixed stylings

### Additional Considerations
[//]: # (How should the change be tested?)
[//]: # (Are there any outstanding questions?)
[//]: # (Were any side-effects caused by the change?)
no changelog as the fix is done in the same release as the main Slider
UX changes

### Links
[//]: # (Related issues, references)
NXT-14640-1

### Comments

Enact-DCO-1.0-Signed-off-by: Daniel Stoian
([daniel.stoian@lgepartner.com](mailto:daniel.stoian@lgepartner.com))

--- a/Slider/Slider.module.less
+++ b/Slider/Slider.module.less
@@ -363,18 +363,7 @@
 					.knob {
 						--lime-tooltip-offset: @cp-f-tooltip-offset;
 					}
-
-					.knob::before {
-						height: @lime-slider-knob-width-large;
-						width: @lime-slider-knob-width-large;
-						border-radius: (@lime-slider-knob-width-large / 2);
-					}
 				}
-			}
-
-			.knob::before {
-				background-color: @lime-slider-handle-disabled-color;
-				outline-color: @lime-slider-handle-border-color;
 			}
 
 			.focus({
